# the_Foundation

./: .clang-format  .gitignore  CMakeLists.txt  CheckSSE.cmake  Depends.cmake  LICENSE  README.md  config.h.in  cplus.doxygen  prototypes.py  ssecheck.c
conf/: tF_gdb.py  the_Foundation.py
include/: stdthreads.h
include/c_plus/: address.h  array.h  atomic.h  audience.h  block.h  blockhash.h  buffer.h  class.h  commandline.h  counted.h  datagram.h  defs.h  file.h  fileinfo.h  future.h  garbage.h  hash.h  list.h  map.h  math.h  math_generic.h  math_sse.h  mutex.h  object.h  objectlist.h  path.h  pipe.h  process.h  ptrarray.h  ptrhash.h  ptrset.h  queue.h  range.h  regexp.h  service.h  set.h  socket.h  sortedarray.h  stdthreads.h  stream.h  (+11 more)
include/lite/: array.h  atomic.h  block.h  class.h  counted.h  defs.h  garbage.h  hash.h  list.h  object.h  ptrarray.h  ptrset.h  range.h  regexp.h  set.h  string.h
include/the_Foundation/: address.h  archive.h  array.h  atomic.h  audience.h  block.h  blockhash.h  buffer.h  c11threads.h  class.h  commandline.h  datagram.h  defs.h  file.h  fileinfo.h  fixed.h  fixed2.h  fixedpoint.h  future.h  garbage.h  hash.h  intset.h  map.h  math.h  math_generic.h  math_sse.h  mutex.h  noise.h  object.h  objectlist.h  path.h  pipe.h  process.h  ptrarray.h  ptrset.h  queue.h  random.h  range.h  rect.h  regexp.h  (+20 more)
lang/c++/: CMakeLists.txt
lang/c++/include/c_plus/: array
lang/c++/src/: array.cc
lang/stubs/: smmintrin.h  stdatomic.h
src/: address.c  archive.c  array.c  audience.c  block.c  blockhash.c  buffer.c  c11threads.c  c_plus.c  class.c  commandline.c  counted.c  crc32.c  datagram.c  file.c  fileinfo.c  fixedpoint.c  future.c  garbage.c  hash.c  intset.c  list.c  main.c  map.c  math.c  math_generic.c  math_sse.c  md5.c  mutex.c  noise.c  object.c  object.h  objectlist.c  path.c  pipe.c  platform_generic.c  platform_linux.c  platform_windows.c  process.c  ptrarray.c  (+26 more)
src/platform/: apple.c  generic.c  linux.c  strnstr.h  windows.c
src/platform/posix/: address.c  datagram.c  locale.c  pipe.c  pipe.h  process.c  service.c  socket.c
src/platform/win32/: address.c  datagram.c  file.c  msdirent.h  process.c  socket.c  string.h
tests/: c++.cc  main.c  mathops.c  network.c  strings.c  t_archive.c  t_math.c  t_network.c  t_string.c  t_test.c  t_threading.c  threading.c  udptest.c
